Minor fix to checkbox align class

--- a/modules/system/assets/ui/less/form.less
+++ b/modules/system/assets/ui/less/form.less
@@ -131,7 +131,7 @@
     }
 
     &.checkbox-align {
-        padding-left: 34px;
+        padding-left: 28px;
         margin-top: -5px;
     }
 
