--- a/modules/system/assets/ui/storm.css
+++ b/modules/system/assets/ui/storm.css
@@ -2356,7 +2356,7 @@ html.cssanimations .cursor-loading-indicator.hide{display:none}
 .form-group.layout-relative{padding-bottom:0}
 .form-group.checkbox-field{padding-bottom:5px}
 .form-group.number-field > .form-control{text-align:right}
-.form-group.checkbox-align{padding-left:34px;margin-top:-5px}
+.form-group.checkbox-align{padding-left:28px;margin-top:-5px}
 .form-group.field-slim.span-left,.form-group.field-slim.span-right{width:50%}
 .form-group.field-indent{padding-left:23px}
 .form-group.input-sidebar-control{padding-right:35px}
